# sipbot

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  errors.rs  fetcher.rs  logger.rs  main.rs  storage.rs
