[package]
name = "sipbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
pickledb = "0.5.1"
reqwest = "0.11.14"
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serenity = "0.11.5"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["tokio-macros", "full"] }
openssl = { version = "0.10.45", features = ["vendored"] }
openssl-sys = { version = "0.9.80", features = ["vendored"] }
